package Decorater;

public abstract class Beverage {
    public abstract String getDescription();
    public abstract int getCost();
}
