package Decorater;

public class Coffee extends Beverage{
    public String getDescription() {
        return "Coffee";
    }
    public int getCost() {
        return 11;
    }
}
