package Decorater;

public class Tea extends Beverage {
    public String getDescription() {
        return "Tea";
    }
    public int getCost() {
        return 13;
    }
}
